--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
+pu lt 90 fd 50 rt 90 pd
+repeat 10 [ repeat 36 [ fd 1 rt 1 ] ]
 	</textarea>
 </body>
 
