--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </head>
 
 <body>
-	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
-	</textarea>
+	<textarea id="code" cols="80" rows="5">pu fd 170 repeat 18 [repeat 3 [pd fd 60 rt 120 pu] fd 60 rt 20]</textarea>
 </body>
 
 </html>
