--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
+ repeat 4 [repeat 3 [fd 60 rt 110]]
 	</textarea>
 </body>
 
