--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
 	<script src="turtle.js"></script>
 	<script src="sketch.js"></script>
+	<script src="stream.js"></script>
 
 </head>
 
