--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
 	<textarea id="code" cols="40" rows="5">
 repeat 3 [fd 60 rt 120]
-	</textarea>
+fd 32
+repeat 24 [rt 14 fd 4]</textarea>
 </body>
 
 </html>
