feat: Creat more interesting initial shape

--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>Logo</title>
-
+	<title>Shiffman's Code Editor</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
 	<script src="turtle.js"></script>
 	<script src="sketch.js"></script>
-
 </head>
-
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
-fd 32
-repeat 24 [rt 14 fd 4]</textarea>
+pu fd -50 rt 90 fd 50 rt -90 pd
+repeat 3 [fd 100 rt -120]
+fd 52
+repeat 36 [rt -10 fd 5]
+fd -2 rt -90 fd 84</textarea>
 </body>
-
 </html>
