fix: Improve initial art further

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@ pu fd -50 rt 90 fd 50 rt -90 pd
 repeat 3 [fd 100 rt -120]
 fd 52
 repeat 36 [rt -10 fd 5]
-fd -2 rt -90 fd 84</textarea>
+fd -2 rt -90 fd 84
+
+pu rt 90 fd 3  rt -90 fd 15 pd
+repeat 48 [
+ fd 90 fd -90
+ rt 97.5 pu fd 9 pd rt -90
+]</textarea>
 </body>
 </html>
