--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
 	<script src="turtle.js"></script>
 	<script src="sketch.js"></script>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<textarea id="code" cols="40" rows="5">
-pu fd -50 rt 90 fd 50 rt -90 pd
-repeat 3 [fd 100 rt -120]
-fd 52
-repeat 36 [rt -10 fd 5]
-fd -2 rt -90 fd 84
+	<div id="main">
+		<div id="logo"></div>
+		<div id="editor">
+			<h2 id="file_name">turtle_path.shffman</h2>
+			<textarea id="code" spellcheck="false">
+pu fd -100 rt 90 fd 80 rt -90 pd
+repeat 3 [fd 200 rt -120]
+fd 104
+repeat 36 [rt -10 fd 10]
+fd -4 rt -90 fd 170
 
-pu rt 90 fd 3  rt -90 fd 15 pd
-repeat 48 [
- fd 90 fd -90
- rt 97.5 pu fd 9 pd rt -90
-]</textarea>
+pu rt 90 fd 4  rt -90 fd 17 pd
+repeat 90 [
+ fd 170 fd -170
+ rt 94 pu fd 9 pd rt -90]</textarea>
+		</div>
+	</div>
 </body>
 </html>
