--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Shiffman's Code Editor</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
-	<script src="turtle.js"></script>
-	<script src="sketch.js"></script>
-	<link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Shiffman's Code Editor</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+    <script src="turtle.js"></script>
+    <script src="sketch.js"></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div id="main">
-		<div id="logo"></div>
-		<div id="editor">
-			<h2 id="file_name">turtle_path.shffman</h2>
-			<textarea id="code" spellcheck="false">
+    <div id="main">
+        <div id="logo"></div>
+        <div id="editor">
+            <h2 id="file_name">turtle_path.shffman</h2>
+            <textarea id="code" spellcheck="false">
+clr #fffd5b
 pu fd -100 rt 90 fd 80 rt -90 pd
 repeat 3 [fd 200 rt -120]
 fd 104
 repeat 36 [rt -10 fd 10]
 fd -4 rt -90 fd 170
 
-pu rt 90 fd 4  rt -90 fd 17 pd
+clr #f75bff
+pu rt 90 fd 4 rt -90 fd 17 pd
 repeat 90 [
  fd 170 fd -170
  rt 94 pu fd 9 pd rt -90]</textarea>
-		</div>
-	</div>
+        </div>
+    </div>
 </body>
 </html>
