--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="editor">
             <h2 id="file_name">turtle_path.shffman</h2>
             <textarea id="code" spellcheck="false">
-clr #fffd5b
+clr cyan
 pu fd -100 rt 90 fd 80 rt -90 pd
 repeat 3 [fd 200 rt -120]
 fd 104
@@ -28,7 +28,9 @@ clr #f75bff
 pu rt 90 fd 4 rt -90 fd 17 pd
 repeat 90 [
  fd 170 fd -170
- rt 94 pu fd 9 pd rt -90]</textarea>
+ rt 94 pu fd 9 pd rt -90]
+
+#save</textarea>
         </div>
     </div>
 </body>
