fead: Add an option to change background color

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div id="editor">
             <h2 id="file_name">turtle_path.shffman</h2>
             <textarea id="code" spellcheck="false">
+bckgr #194034
+
 clr cyan
 pu fd -100 rt 90 fd 80 rt -90 pd
 repeat 3 [fd 200 rt -120]
