feat: Add icon for the browser tab

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="turtle.js"></script>
     <script src="sketch.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
 </head>
 <body>
     <div id="main">
