feat: Add placeholder text for editor area

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="logo"></div>
         <div id="editor">
             <h2 id="file_name">turtle_path.shffman</h2>
-            <textarea id="code" spellcheck="false">
+            <textarea id="code" spellcheck="false" placeholder="code here...">
 bckgr #194034
 
 clr cyan
