--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
 	<script src="turtle.js"></script>
-	<script src="parser.js"></script>
 	<script src="sketch.js"></script>
 
 </head>
 
 <body>
-	<textarea id="code" cols="40" rows="5">repeat 3 [repeat 6 [fd 60 rt 20]]</textarea>
+	<textarea id="code" cols="40" rows="5">repeat 180 [rt 2 fd 2] pu fd 50 pd repeat 180 [rt 2 fd 2] pu fd 50 pd repeat 180 [rt 2 fd 2]</textarea>
 </body>
 
 </html>
