fix: Change extension to the proper ones
I found out that Shiffman haven`t invented this language himself

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="main">
         <div id="logo"></div>
         <div id="editor">
-            <h2 id="file_name">turtle_path.shffman</h2>
+            <h2 id="file_name">turtle_path.logocode</h2>
             <textarea id="code" spellcheck="false" placeholder="code here..."></textarea>
         </div>
     </div>
