--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
+	<textarea id="code">
+train
 	</textarea>
 </body>
 
