feat: Add support for file drag'n'dropping
- handle filetransfer;
- imporve UI with visual encodings;
- change 'save file' to 'save logocode';
- change GitHub link;
- fix a bug in HTML tags.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div id="editor">
             <div id="editor_header_box">
                 <h2 id="file_name">turtle_path.logocode</h2>
-                <button id="save_file_btn">save file</button>
+                <button id="save_file_btn">save logocode</button>
             </div>
             <textarea id="code" spellcheck="false" placeholder="code here..."></textarea>
             <div id="editor_footer">
-                <a href="https://github.com/fabritsius/logo-code-editor" target="_blank">Code available on GitHub</span>
+                <a href="https://github.com/fabritsius/logo-code-editor" target="_blank">Repo is available on GitHub</a>
             </div>
         </div>
     </div>
