Removed unneeded code and set init logo code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<textarea id="code" cols="40" rows="5">repeat 180 [rt 2 fd 2] pu fd 50 pd repeat 180 [rt 2 fd 2] pu fd 50 pd repeat 180 [rt 2 fd 2]</textarea>
+	<textarea id="code" cols="40" rows="5">repeat 50 [ fd 10 rt 50 repeat 4 [fd 40 rt 90]]</textarea>
 </body>
 
 </html>
