An alternative for iterating the input and a intent for the repeat command.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
-	</textarea>
+repeat 3 [ fd 60 rt 120 ]</textarea>
 </body>
 
 </html>
