feat: Display the name of the example logocode
- name disappears after couple of seconds;
 - capitalize filenames of examples.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 <body>
     <div id="main">
-        <div id="logo"></div>
+        <div id="logo_box">
+            <div id="logo"></div>
+            <div id="logo_footer">
+                <span id="example_name"></span>
+            </div>
+        </div>
         <div id="editor">
             <div id="editor_header_box">
                 <h2 id="file_name">turtle_path.logocode</h2>
