--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 	<title>Logo</title>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
+	<script src="libraries/p5.js"></script>
+	<script src="libraries/p5.dom.js"></script>
+	<script src="libraries/p5.sound.js"></script>
 	<script src="turtle.js"></script>
 	<script src="sketch.js"></script>
 
@@ -17,7 +18,7 @@
 
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
+pu lt 90 fd 45 rt 90 fd 30 pd fd 5 rt 25 fd 16 rt 15 fd 25
 	</textarea>
 </body>
 
