feat: Restructure and add a Service Worker
- add Offline-fetch support;
- fix a bug which causes an infinite loop in specific cases;
- add new 'No Internet' logocode as Offline placeholder (also feedback);
- improve project structure (mv and mkdir).

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Logo Code Editor</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
-    <script src="turtle.js"></script>
-    <script src="sketch.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+    <script src="js/libs/p5/p5.min.js"></script>
+    <script src="js/libs/p5/p5.dom.min.js"></script>
+    <script src="js/turtle.js"></script>
+    <script src="js/sketch.js"></script>
+    <script src="js/swhelper.js"></script>
 </head>
 <body>
     <div id="main">
