--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
 	<script src="turtle.js"></script>
+	<script src="parser.js"></script>
+	<script src="command.js"></script>
 	<script src="sketch.js"></script>
 
 </head>
 
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 3 [fd 60 rt 120]
-	</textarea>
+repeat 36 [lt 10 pu fd 1 pd repeat 120 [fd 2 rt 3]]
+</textarea>
 </body>
 
 </html>
