--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
 	<script src="turtle.js"></script>
+	<script src="expression.js"></script>
 	<script src="parser.js"></script>
 	<script src="command.js"></script>
 	<script src="sketch.js"></script>
