Improved Parser with more OOP
Added an example of parameters

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 	<textarea id="code" cols="40" rows="5">
-repeat 36 [lt 10 pu fd 1 pd repeat 120 [fd 2 rt 3]]
+color #FFF repeat 36 [lt 10 pu fd 1 pd repeat 120 [fd 2 rt 3]] author [Daniel https://thecodingtrain.com/ shiffman]
 </textarea>
 </body>
 
