added a test data drop down

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </head>
 
   <body>
-    <textarea id="code" cols="40" rows="5">color 66ff66 repeat 36 [lt 10 pu fd 1 pd repeat 120 [fd 2 rt 3]]</textarea>
+    <select id="testdata" style="width: 150px;"></select>
+    <br />
+    <textarea id="code" cols="40" rows="5"></textarea>
 	<br />
   </body>
 </html>
