Add more description to Command and Parser classes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="turtle.js"></script>
     <script src="parser.js"></script>
     <script src="command.js"></script>
+    <script src="commandList.js"></script>
     <script src="sketch.js"></script>
   </head>
 
