Disabled spellcheck in the textarea

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <select id="testdata" style="width: 150px;"></select>
     <br />
-    <textarea id="code" cols="40" rows="5"></textarea>
+    <textarea id="code" cols="40" rows="5" autocomplete="false" spellcheck="false" autofocus></textarea>
 	<br />
   </body>
 </html>
