Added autofit button (#44)
* Added autofit button

You can now pass a callback function to the command parser and command executors to be invoked after a command is executed (to access the updated position of the turtle)
This mechanism is used to expand an Axis-Aligned Bounding Box every time the turtle moves with the pen down.

* Autofit when selecting from dropdown

Automatically autofit the drawing when selecting an example from the dropdown menu.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <script src="turtle.js"></script>
     <script src="parser.js"></script>
     <script src="command.js"></script>
+    <script src="bounding_box.js"></script>
     <script src="sketch.js"></script>
   </head>
 
   <body>
     <select id="testdata" style="width: 150px;"></select>
+    <button id="button_autofit">Autofit</button>
     <br />
     <textarea id="code" cols="40" rows="5" autocomplete="false" spellcheck="false" autofocus></textarea>
 	<br />
