--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="turtle.js"></script>
+    <script src="expression.js"></script>
     <script src="parser.js"></script>
     <script src="command.js"></script>
     <script src="commandList.js"></script>
     <script src="bounding_box.js"></script>
     <script src="sketch.js"></script>
   </head>
-
+  
   <body>
     <select id="testdata" style="width: 150px;"></select>
     <button id="button_autofit">Autofit</button>
@@ -24,4 +25,5 @@
     <textarea id="code" cols="40" rows="5" autocomplete="false" spellcheck="false" autofocus></textarea>
 	<br />
   </body>
+  
 </html>
