--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="expression.js"></script>
     <script src="parser.js"></script>
     <script src="command.js"></script>
+    <script src="commandList.js"></script>
     <script src="bounding_box.js"></script>
 
     <link rel="stylesheet" href="./style.css">
