--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="expression.js"></script>
     <script src="parser.js"></script>
     <script src="command.js"></script>
+    <script src="commandList.js"></script>
     <script src="bounding_box.js"></script>
 
     <link rel="stylesheet" href="./style.css">
@@ -33,22 +34,22 @@
             <img src="./assets/img/color.svg" style="width: 30px; height: 30px; padding: 2px;" alt="">
         </span>
 	</div>
-	
+
 	<!-- Canvas div -->
 	<div id="logo-canvas"></div>
-	
+
 	<!-- Editor -->
 	<textarea id="code" cols="40" rows="4" autocomplete="false" spellcheck="false" autofocus></textarea>
-	
+
 	<!-- Icon Copyright info -->
 	<small style="color: white; font-family: 'Montserrat'; padding-top: 10px;">
 		Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Turtle">Turtle</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"     title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
 	</small>
-	
+
 	<script>
 		document.querySelector("#code").value = "pu lt 90 fd 100 lt 90 fd 250 rt 90 rt 90 pd fd 500 rt 90 fd 150 rt 90 fd 500 rt 90 fd 150";
 	</script>
-	
+
 	<script src="sketch.js"></script>
 </body>
 
