--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div id="banner">
 		<img src="./assets/img/turtle.svg" style="width: 40px; height: 40px;" alt="">
-		<span style="padding-top: 10px;">LOGO</span>
+		<span id="LOGO">LOGO</span>
         <select id="testdata" style="width: 150px;"></select>
 
         <span class="ico_btn_dark" id="recentre" style="padding-top: 2px;" tooltip="Recentre">
@@ -38,11 +38,12 @@
 	<!-- Canvas div -->
 	<div id="logo-canvas"></div>
 
-	<!-- Editor -->
+    <!-- Editor -->
+    <div id="resize-handle" class="resize-handle"><div></div></div>
 	<textarea id="code" cols="40" rows="4" autocomplete="false" spellcheck="false" autofocus></textarea>
 
 	<!-- Icon Copyright info -->
-	<small style="color: white; font-family: 'Montserrat'; padding-top: 10px;">
+	<small class="copyright-footer">
 		Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Turtle">Turtle</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"     title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
 	</small>
 
