Stop execuation for bad commands and argument that fail validation and highlight the error in the text area

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <!-- Editor -->
     <div id="resize-handle" class="resize-handle"><div></div></div>
+	<div id="code_bg" cols="40" rows="4"></div>
 	<textarea id="code" cols="40" rows="4" autocomplete="false" spellcheck="false" autofocus></textarea>
 
 	<!-- Icon Copyright info -->
