--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 	<!-- Canvas div -->
 	<div id="logo-canvas"></div>
 
-    <!-- Editor -->
-    <div id="resize-handle" class="resize-handle"><div></div></div>
-	<div id="code_bg" cols="40" rows="4"></div>
-	<textarea id="code" cols="40" rows="4" autocomplete="false" spellcheck="false" autofocus></textarea>
+  <!-- Editor -->
+  <div id="resize-handle" class="resize-handle"><div></div></div>
+  <div id="editor-container" class="editor-container">
+    <div id="code_bg"></div>
+    <div class="textarea-container"><textarea id="code" cols="40" rows="4" autocomplete="false" spellcheck="false" autofocus></textarea></div>
+  </div>
 
 	<!-- Icon Copyright info -->
 	<small class="copyright-footer">
