Added animation when centering the drawing
# Animations

Added an `Animation` class and used it to add a smooth transition when resizing the window and when clicking the 'center' button.

### YouTube Video

[![](https://img.youtube.com/vi/h6z2oFolkDk/0.jpg)](https://youtu.be/h6z2oFolkDk)

Many parallel calls to `requestAnimationFrame()` is detrimental to performance so each `Animation` instance registers itself with the `AnimationManager` which is responsible for updating all the animations at once in a single `requestAnimationFrame()` invocation and removes animations when they are finished.

## Usage

```javascript
// Let's animate the size of this box
const box = { width: 14, height: 7 };

const startValues = { w: box.width, h: box.height };
const endValues   = { w: 40, h: 20 };
const durationMilliseconds = 1000;
function onUpdate(values) {
    box.width = values.w;
    box.height = values.h;
}
function onComplete(values) {
    console.log('Animation finished!');
}
const easingFunction = 'EASE_IN_OUT_QUINT';
let anim = new Animation(startValues, endValues, durationMilliseconds, onUpdate, onComplete, easingFunction /* Optional */);

// Skip instantly to the end of the animation
anim.skip();
```

These are the available easing functions:

- LINEAR
- EASE_IN_QUAD
- EASE_OUT_QUAD
- EASE_IN_OUT_QUAD
- EASE_IN_CUBIC
- EASE_OUT_CUBIC
- EASE_IN_OUT_CUBIC
- EASE_IN_QUART
- EASE_OUT_QUART
- EASE_IN_OUT_QUART
- EASE_IN_QUINT
- EASE_OUT_QUINT
- EASE_IN_OUT_QUINT

These are specified as strings and can be uppercase or lowercase, contain spaces or underscores or no separator at all e.g. `"ease in out cubic"` `"EASE_IN_OUT_CUBIC"` `"EASEINOUTCUBIC"` are all equivalent.

---

Also fixed a bug where if the user clicked the mouse _outside_ the canvas, then dragged the mouse _inside_ the canvas, it would try to drag the drawing but would jump about and be positioned incorrectly.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="command.js"></script>
     <script src="commandList.js"></script>
     <script src="bounding_box.js"></script>
+    <script src="animation.js"></script>
 
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
